# screeps

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js_src/: main.js
src/: context.rs  entity.rs  game_loop.rs  lib.rs  logging.rs  memory.rs  tracing.rs
src/actor/: actor_core.rs  creep_actor.rs  creep_builder.rs  creep_harvester.rs  creep_upgrader.rs  creep_worker.rs  mod.rs  room_actor.rs  spawn.rs  spawn_actor.rs
src/common/: common.rs  enum_downcast.rs  id_manager.rs  mod.rs
src/memory/: memory.rs  memory_core.rs  mod.rs  serde_memory.rs  task.rs  task_id.rs
src/planner/: mod.rs  planner_core.rs
src/task/: basic_harvest_task.rs  build_task.rs  creep_spawn_task.rs  energy_require_task.rs  mod.rs  serde_id.rs  serde_task.rs  serialize.rs  task_core.rs  task_id.rs  tasks.rs  upgrade_task.rs
